--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+@import '@angular/material/prebuilt-themes/deeppurple-amber.css';
+table {
+    width: 100%;
+  }
+  .dobro{
+      background-color: rgb(3, 247, 3);
+  }
+  .slabo{
+      background-color: rgba(255, 146, 146, 0.993);
+  }
