--- a/src/app/form-dodaj/form-dodaj.component.html
+++ b/src/app/form-dodaj/form-dodaj.component.html
@@ -7,6 +7,9 @@
   <mat-form-field>
       <input matInput  formControlName="stevilka" placeholder="Registrska številka">
   </mat-form-field>
+  <mat-form-field>
+    <input matInput  formControlName="gume" placeholder="Dimenzije gum">
+</mat-form-field>
 
   <mat-form-field>
       <input matInput formControlName="datum" [matDatepicker]="picker" placeholder="Konec registracije">
@@ -20,7 +23,7 @@
 
       
     <button mat-raised-button type="submit" [disabled]="!registracije.valid">Vnesi</button>
-
+      {{uspeh}}
    
   
 </div>
