--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,34 +1,44 @@
+
 <h3>Legenda:</h3>
-<button style="background-Color:#FF4136">Registracija je potekla</button>
+<button style="background-Color: rgb(255, 119, 29)">Registracija poteče v manj kot 30 dni </button>
 <button style="background-Color:#2ECC40">Registracija se ni potekla</button>
-<button style="background-Color:rgb(255, 229, 61)">Potekla registracija je bila videna</button>
+<button style="background-Color:#FF4136">Registracija je potekla</button>
+<button style="background-Color:rgb(255, 229, 61)">Videno</button>
+
+<mat-form-field>
+  <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Isci">
+</mat-form-field>
 <table id="pdf" mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
 
   <!-- Name Column -->
   <ng-container matColumnDef="avto">
     <th mat-header-cell *matHeaderCellDef mat-sort-header> Avto </th>
-    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo < zdaj && element.seen==0 ,'videno': element.seen==1}" > {{element.avto}} </td>
+    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo <= zdaj && element.seen==0 ,'videno': element.seen==1,'poteklo': element.regdo < now}" > {{element.avto}} </td>
   </ng-container>
 
   <!-- Weight Column -->
   <ng-container matColumnDef="regst">
     <th mat-header-cell *matHeaderCellDef> Registrska številka </th>
-    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo < zdaj && element.seen==0,'videno': element.seen==1 }" > {{element.regst}} </td>
+    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo <= zdaj && element.seen==0,'videno': element.seen==1,'poteklo': element.regdo < now }" > {{element.regst}} </td>
+  </ng-container>
+  <ng-container matColumnDef="gume">
+    <th mat-header-cell *matHeaderCellDef> Dimenzije gum </th>
+    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo <= zdaj && element.seen==0,'videno': element.seen==1,'poteklo': element.regdo < now }" > {{element.gume}} </td>
   </ng-container>
 
   <!-- Symbol Column -->
   <ng-container matColumnDef="regdo">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>Registracija veljavna do </th>
-    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo < zdaj && element.seen==0,'videno': element.seen==1 }"> {{element.regdo | date:longDate}} </td>
+    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo <= zdaj && element.seen==0,'videno': element.seen==1,'poteklo': element.regdo < now }"> {{element.regdo | date:longDate}} </td>
   </ng-container>
   <ng-container matColumnDef="opombe">
       <th mat-header-cell *matHeaderCellDef>Opombe </th>
-      <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo < zdaj && element.seen==0,'videno': element.seen==1 }">{{element.opombe}}</td>
+      <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo <= zdaj && element.seen==0,'videno': element.seen==1 ,'poteklo': element.regdo < now}">{{element.opombe}}</td>
     </ng-container>
 
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>Uredi </th>
-    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo < zdaj && element.seen==0 ,'videno': element.seen==1}" >  <button md-raised-button (click)="markAsSeen(element.id)" >videno</button><button md-raised-button [routerLink]="['/dodaj', element.id]"  >Uredi</button> </td>
+    <td mat-cell *matCellDef="let element;let i = index;" [ngClass]="{'dobro' : element.regdo  > zdaj  , 'slabo' : element.regdo <= zdaj && element.seen==0 ,'videno': element.seen==1,'poteklo': element.regdo < now}" >  <button md-raised-button (click)="markAsSeen(element)" >videno</button><button md-raised-button [routerLink]="['/dodaj', element.id]"  >Uredi</button> </td>
   </ng-container>
   
 
