--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
-
+{{error}}
 <h3>Legenda:</h3>
 <button style="background-Color: rgb(255, 119, 29)">Registracija poteče v manj kot 30 dni </button>
 <button style="background-Color:#2ECC40">Registracija se ni potekla</button>
