--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -44,7 +44,7 @@
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
   <tr mat-row  *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
-<mat-paginator [pageSizeOptions]="[5, 10, 20,fullpage]" showFirstLastButtons></mat-paginator>
+<mat-paginator [pageSizeOptions]="[100]" showFirstLastButtons></mat-paginator>
 <div>   
   <input type="button" value="Izvozi sliko v pdf" (click)="captureScreen()"/>  
 </div>  
