dodano tabela za prometna dovoljenja

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,7 @@
 <nav>
     <button mat-menu-item routerLink="/home" routerLinkActive="home">Domov</button>
     <button mat-menu-item routerLink="/dodaj" routerLinkActive="active">Dodaj</button>
+    <button mat-menu-item routerLink="/prometna" routerLinkActive="active">Prometna Dovoljenja</button>
  
 </nav>
 <router-outlet></router-outlet>
